# youtube-analytics-project

./: pyproject.toml
homework-2/: moscowpython.json
homework-5/: main.py
src/: channel.py  moscowpython.json  playlist.py  video.py
